--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <p>
       Our ML Volunteers will help you on the Micro-prediction and Analytics.
     </p>
-    <a href="features.html" class="btn btn-default banner_btn"
+    <a href="feature.html" class="btn btn-default banner_btn"
       >Featurepreneur Projects</a
     >
   </div>
