--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,8 @@
                 Don't have an account? Click here to
                 <a href="register.html">Register</a>
               </p>
-              <form>
+
+              <form >
                 <!-- <div class="social-signin text-center">
                   <a title="Facebook" class="fb"
                     ><i class="fa fa-facebook"></i>&nbsp;&nbsp;Continue with
@@ -29,21 +30,23 @@
                 <div id="err-msg"></div>
                 <div class="form-group">
                   <input
-                    type="email"
+
                     class="form-control"
                     placeholder="Email Address"
                     id="email"
+
                   />
                 </div>
+
                 <div class="form-group">
                   <input
-                    type="password"
+                  type="password"
                     class="form-control"
                     placeholder="Password"
                     id="password"
                   />
                 </div>
-                <button type="submit" class="btn btn-primary btn-block">
+                  <button  type="submit" class="btn btn-primary btn-block">
                   Login
                 </button>
               </form>
@@ -74,35 +77,35 @@
 <script src="js/url.js"></script>
 <script src="js/cookie.js"></script>
 <script>
-  document.addEventListener("submit", sendData);
-  function sendData(e) {
-    e.preventDefault();
-    const password = document.getElementById("password").value;
-    const email = document.getElementById("email").value;
-    fetch(`${url}api/login`, {
-      method: "POST",
-      headers: {
-        Accept: "application/json",
-        "Content-Type": "application/json",
-      },
-      body: JSON.stringify({
-        email: email,
-        password: password,
-        user_role: 2,
-      }),
-    })
-      .then((res) => res.json())
-      .then((data) => {
-        console.log(data);
-        if (data.user_id === -1) {
-          document.getElementById(
-            "err-msg"
-          ).innerHTML = `<div class="err-msg">${data.authenticated}</div>`;
-        } else {
-          setCookie("userid", data.user_id, 1);
-          window.location.assign("/features.html");
-        }
+ document.addEventListener("submit", sendData);
+    function sendData(e) {
+      e.preventDefault();
+      const password = document.getElementById("password");
+      const email = document.getElementById("email");
+      fetch(`${url}api/login`, {
+        method: "POST",
+        headers: {
+          Accept: "application/json",
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({
+          email: email,
+          password: password,
+          user_role: 2,
+        }),
       })
-      .catch((err) => console.log(err));
-  }
+        .then((res) => res.json())
+        .then((data) => {
+          console.log(data);
+          if (data.user_id === -1) {
+            document.getElementById(
+              "err-msg"
+            ).innerHTML = `<div class="err-msg">${data.authenticated}</div>`;
+          } else {
+            setCookie("userid", data.user_id, 1);
+            window.location.assign("/feature.html");
+          }
+        })
+        .catch((err) => console.log(err));
+    }
 </script>
